    happens first.

The call in question was added by Azundris for Escreen.  So far
Escreen seems to be behaving properly with this patch applied, but all
my Eterm windows (Escreen and otherwise) are pre-sized with -g anyway.
So I'm going to keep my eye on it for awhile.  In case of trouble,
change the "#if 0" to "#ifdef ESCREEN" to revert to previous behavior
when in Escreen mode.  Normal operation should not require the call in
question.
----------------------------------------------------------------------
Wed May 14 14:54:16 2008                        Michael Jennings (mej)

Modified patch from hsim@gmx.li to allow setting of the "Urgent" hint
on beep.
----------------------------------------------------------------------
Wed May 14 15:26:13 2008                        Michael Jennings (mej)

Patch from Emmanuel Anne <emmanuel.anne@gmail.com> to fix cut/paste
with KDE applications.
----------------------------------------------------------------------
Wed May 14 16:09:04 2008                        Michael Jennings (mej)

(Correct) fix for CVE-2008-1692.  Eterm no longer defaults to using
":0" for $DISPLAY due to the possibility that an attacker can create a
fake X server on a shared system, intercept the Eterm X connection,
and send fake keystrokes to the victim's Eterm to execute arbitrary
commands as that user.

The previous fix, while it did indeed correct the vulnerability, broke
the --display option.  The original fix from Bernhard Link was more
correct, albeit not quite on target.
----------------------------------------------------------------------
Wed Jun 11 20:18:44 2008                        Michael Jennings (mej)

Eterm 0.9.5 release.
----------------------------------------------------------------------
Tue Dec 16 22:03:54 2008                        Michael Jennings (mej)

Fix compile errors related to the removal of unnecessary typecasting
macros.
----------------------------------------------------------------------